--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="slideshow-container">
       <div class="slide fade">
-        <img src="image1.jpg" alt="Slide 1" />
+        <img src="https://d.newsweek.com/en/full/1962972/spacex-owner-tesla-ceo-elon-musk.jpg" alt="Slide 1" />
       </div>
       <div class="slide fade">
         <img src="image2.jpg" alt="Slide 2" />
