--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <img src="https://d.newsweek.com/en/full/1962972/spacex-owner-tesla-ceo-elon-musk.jpg" alt="Slide 1" />
       </div>
       <div class="slide fade">
-        <img src="image2.jpg" alt="Slide 2" />
+        <img src="https://assets.entrepreneur.com/content/3x2/2000/1692979396-646e6d17a739dc001809407ccopy.jpg" alt="Slide 2" />
       </div>
       <div class="slide fade">
-        <img src="image3.jpg" alt="Slide 3" />
+        <img src="https://bpb-us-e2.wpmucdn.com/sites.middlebury.edu/dist/b/3701/files/2015/10/donald-trump-has-surged-to-the-top-of-2-new-2016-polls.jpg" alt="Slide 3" />
       </div>
     </div>
 
@@ -93,6 +93,7 @@
       <span class="dot"></span>
       <span class="dot"></span>
     </div>
+    <p>this is a satire website i dont actually know the size of these mens penis's</p>
 
     <script>
       let slideIndex = 0;
