--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
       .active {
         background-color: #333;
       }
+      footer {
+        background: #222;
+        color: #aaa;
+        padding: 15px;
+        font-size: 0.9em;
+      }
     </style>
   </head>
   <body>
@@ -93,8 +99,11 @@
       <span class="dot"></span>
       <span class="dot"></span>
     </div>
-    <p>this is a satire website i dont actually know the size of these mens penis's</p>
-
+    
+     <footer>
+      <p>this is a satire website i dont actually know the size of these mens penises</p>
+    </footer>
+    
     <script>
       let slideIndex = 0;
       showSlides();
