--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
       .active {
         background-color: #333;
       }
+     footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background: #222;
+        color: #aaa;
+        padding: 15px;
+        font-size: 0.9em;
+        transition: background 0.3s ease, color 0.3s ease;
+      }
       footer p::before {
         content: "really small";
         display: inline-block;
